--- a/www/public/css/home.css
+++ b/www/public/css/home.css
@@ -1,6 +1,12 @@
+h1
+{
+    text-align: center;
+}
+
 #login-form
 {
     border : 1px solid black;
+    background-color: #FFECB3;
     padding: 1em;
     width: 300px;
     display: block;
@@ -10,5 +16,4 @@
 
 #login-form > h2
 {
-    margin-bottom: 5px;
 }
