--- a/www/public/css/main.css
+++ b/www/public/css/main.css
@@ -1,4 +1,24 @@
-.my-form-group
+body {
+    padding: 10px;
+}
+
+h1
 {
-    margin: 1em 0;
+    text-align: center;
+}
+
+#form-login
+{
+    border : 1px solid black;
+    background-color: #FFECB3;
+    padding: 1em;
+    width: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#form-daftar
+{
+    width:800px;
 }
