--- a/www/laravel4/app/dev/sass/css/main.css
+++ b/www/laravel4/app/dev/sass/css/main.css
@@ -1,5 +1,4 @@
 body {
-  padding: 10px;
   color: white;
   background-color: #ed6333;
 }
@@ -24,4 +23,89 @@ h1 {
 
 #form-daftar {
   width: 800px;
+}
+
+.btn-dasar {
+  background-color: #343434;
+  padding: 7px 15px;
+  border-radius: 0;
+  color: white;
+  border: 1px solid white;
+  transition: all 300ms ease;
+}
+
+.btn-dasar:hover {
+  background-color: white;
+  color: #343434;
+}
+
+.help-block {
+  color: white;
+}
+
+.navbar-default {
+  background-color: #343434;
+  border-color: #bc423b;
+}
+.navbar-default .navbar-brand {
+  color: #ecf0f1;
+}
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+  background-color: #bc423b;
+  color: white;
+}
+.navbar-default .navbar-text {
+  color: #ecf0f1;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #ecf0f1;
+}
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+  background-color: #bc423b;
+  color: white;
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+  background-color: #bc423b;
+  color: white;
+  background-color: #bc423b;
+}
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+  background-color: #bc423b;
+  color: white;
+  background-color: #bc423b;
+}
+.navbar-default .navbar-toggle {
+  border-color: #bc423b;
+}
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+  background-color: #bc423b;
+}
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #ecf0f1;
+}
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+  border-color: #ecf0f1;
+}
+.navbar-default .navbar-link {
+  color: #ecf0f1;
+}
+.navbar-default .navbar-link:hover {
+  background-color: #bc423b;
+  color: white;
+}
+
+@media (max-width: 767px) {
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
+    color: #ecf0f1;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+    background-color: #bc423b;
+    color: white;
+  }
+  .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+    background-color: #bc423b;
+    color: white;
+    background-color: #bc423b;
+  }
 }
