--- a/www/laravel4/app/dev/sass/main.sass
+++ b/www/laravel4/app/dev/sass/main.sass
@@ -1,24 +1,112 @@
 $break-hp: "only screen and (max-width : 400px)"
 $tc-terang: #ed6333
 $tc-gelap: #343434
+$tc-merah: #bc423b
 
 body
-    padding: 10px
-    color: white
-    background-color: $tc-terang
+  color: white
+  background-color: $tc-terang
 
 h1
-    text-align: center
+  text-align: center
 
 #form-login
-    background-color: $tc-gelap
-    padding: 1em
-    display: block
-    margin-left: auto
-    margin-right: auto
-    width: 400px
-    @media #{$break-hp}
-        width: 300px
+  background-color: $tc-gelap
+  padding: 1em
+  display: block
+  margin-left: auto
+  margin-right: auto
+  width: 400px
+  @media #{$break-hp}
+    width: 300px
 
 #form-daftar
-    width: 800px
+  width: 800px
+
+.btn-dasar
+  background-color: $tc-gelap
+  padding: 7px 15px
+  border-radius: 0
+  color: white
+  border: 1px solid white
+  transition: all 300ms ease
+
+.btn-important
+
+.btn-dasar:hover
+  background-color: white
+  color: $tc-gelap
+
+.help-block
+  color: white
+
+$bgDefault      : $tc-gelap
+$bgHighlight    : $tc-merah
+$colDefault     : #ecf0f1
+$bgHover        : $tc-merah
+$colHover       : white
+$dropDown       : false
+.navbar-default
+  background-color: $bgDefault
+  border-color: $bgHighlight
+  .navbar-brand
+    color: $colDefault
+    &:hover, &:focus
+      background-color: $bgHover
+      color: $colHover
+  .navbar-text
+    color: $colDefault
+  .navbar-nav
+    > li
+      > a
+        color: $colDefault
+        &:hover, &:focus
+          background-color: $bgHover
+          color: $colHover
+      @if $dropDown
+        > .dropdown-menu
+          background-color: $bgDefault
+          > li > a
+            color: $colDefault
+            &:hover, &:focus
+              background-color: $bgHover
+              color: $colHover
+              background-color: $bgHighlight
+          .divider
+            background-color: $bgHighlight
+    > .active
+      > a, > a:hover, > a:focus
+        background-color: $bgHover
+        color: $colHover
+        background-color: $bgHighlight
+    > .open
+      > a, > a:hover, > a:focus
+        background-color: $bgHover
+        color: $colHover
+        background-color: $bgHighlight
+  .navbar-toggle
+    border-color: $bgHighlight
+    &:hover, &:focus
+      background-color: $bgHighlight
+    .icon-bar
+      background-color: $colDefault
+  .navbar-collapse,
+  .navbar-form
+    border-color: $colDefault
+  .navbar-link
+    color: $colDefault
+    &:hover
+      background-color: $bgHover
+      color: $colHover
+@media (max-width: 767px)
+  .navbar-default .navbar-nav .open .dropdown-menu
+    > li > a
+      color: $colDefault
+      &:hover, &:focus
+        background-color: $bgHover
+        color: $colHover
+    > .active
+      > a, > a:hover, > a:focus,
+        background-color: $bgHover
+        color: $colHover
+        background-color: $bgHighlight
