--- a/www/laravel4/app/dev/sass/main.sass
+++ b/www/laravel4/app/dev/sass/main.sass
@@ -48,7 +48,9 @@ $colHover       : white
 $dropDown       : false
 .navbar-default
   background-color: $bgDefault
-  border-color: $bgHighlight
+  border-color: $bgDefault
+  border-radius: 0
+  margin: 0
   .navbar-brand
     color: $colDefault
     &:hover, &:focus
