Add admin-tc/user page and admin-tc/user/{id} detail page

--- a/www/laravel4/app/dev/sass/css/main.css
+++ b/www/laravel4/app/dev/sass/css/main.css
@@ -39,6 +39,11 @@ h1 {
   color: #343434;
 }
 
+.bg-error {
+  padding: 0.2rem;
+  background-color: #bc423b;
+}
+
 .help-block {
   color: white;
 }
