--- a/www/laravel4/app/dev/sass/main.sass
+++ b/www/laravel4/app/dev/sass/main.sass
@@ -37,6 +37,10 @@ h1
   background-color: white
   color: $tc-gelap
 
+.bg-error
+  padding: 0.2rem
+  background-color: $tc-merah
+
 .help-block
   color: white
 
