--- a/www/laravel4/app/dev/sass/css/main.css
+++ b/www/laravel4/app/dev/sass/css/main.css
@@ -31,17 +31,38 @@ h1 {
   border-radius: 0;
   color: white;
   border: 1px solid white;
-  transition: all 300ms ease;
+  transition: all 200ms ease;
+}
+
+.btn-dasar:visited, .btn-dasar:link {
+  text-decoration: none;
+  color: white;
 }
 
 .btn-dasar:hover {
   background-color: white;
   color: #343434;
+  text-decoration: none;
+}
+
+.btn-dasar:active {
+  color: #343434;
+  background-color: white;
+  text-decoration: none;
+}
+
+.btn-important {
+  background-color: green;
 }
 
 .bg-error {
   padding: 0.2rem;
   background-color: #bc423b;
+}
+
+.bg-success {
+  padding: 0.3rem;
+  background-color: green;
 }
 
 .help-block {
@@ -66,6 +87,7 @@ h1 {
 }
 .navbar-default .navbar-nav > li > a {
   color: #ecf0f1;
+  transition: all 300ms ease;
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
   background-color: #bc423b;
