--- a/www/laravel4/app/dev/sass/main.sass
+++ b/www/laravel4/app/dev/sass/main.sass
@@ -29,17 +29,32 @@ h1
   border-radius: 0
   color: white
   border: 1px solid white
-  transition: all 300ms ease
+  transition: all 200ms ease
 
-.btn-important
+.btn-dasar:visited, .btn-dasar:link
+  text-decoration: none
+  color: white
 
 .btn-dasar:hover
   background-color: white
   color: $tc-gelap
+  text-decoration: none
+
+.btn-dasar:active
+  color: $tc-gelap
+  background-color: white
+  text-decoration: none
+
+.btn-important
+  background-color: green
 
 .bg-error
   padding: 0.2rem
   background-color: $tc-merah
+
+.bg-success
+  padding: 0.3rem
+  background-color: green
 
 .help-block
   color: white
@@ -66,6 +81,7 @@ $dropDown       : false
     > li
       > a
         color: $colDefault
+        transition: all 300ms ease
         &:hover, &:focus
           background-color: $bgHover
           color: $colHover
