--- a/www/laravel4/app/dev/sass/css/main.css
+++ b/www/laravel4/app/dev/sass/css/main.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 body {
   color: white;
   background-color: #ed6333;
@@ -5,6 +6,10 @@ body {
 
 h1 {
   text-align: center;
+}
+
+body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: "Ubuntu", Helvetica, Arial, sans-serif !important;
 }
 
 #form-login {
