--- a/www/laravel4/app/dev/sass/main.sass
+++ b/www/laravel4/app/dev/sass/main.sass
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans)
+
 $break-hp: "only screen and (max-width : 400px)"
 $tc-terang: #ed6333
 $tc-gelap: #343434
@@ -9,6 +11,9 @@ body
 
 h1
   text-align: center
+
+body,h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
+  font-family: "Open Sans", "Ubuntu", Helvetica, Arial, sans-serif!important
 
 #form-login
   background-color: $tc-gelap
