--- a/www/laravel4/app/dev/sass/main.sass
+++ b/www/laravel4/app/dev/sass/main.sass
@@ -1,13 +1,13 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans)
 
 $break-hp: "only screen and (max-width : 400px)"
-$tc-terang: #ed6333
-$tc-gelap: #343434
-$tc-merah: #bc423b
+$tc-light: #ed6333
+$tc-dark: #343434
+$tc-red: #bc423b
 
 body
   color: white
-  background-color: $tc-terang
+  background-color: $tc-light
 
 h1
   text-align: center
@@ -16,7 +16,7 @@ body,h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
   font-family: "Open Sans", "Ubuntu", Helvetica, Arial, sans-serif!important
 
 #form-login
-  background-color: $tc-gelap
+  background-color: $tc-dark
   padding: 1em
   display: block
   margin-left: auto
@@ -29,7 +29,7 @@ body,h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
   width: 800px
 
 .btn-dasar
-  background-color: $tc-gelap
+  background-color: $tc-dark
   padding: 7px 15px
   border-radius: 0
   color: white
@@ -42,11 +42,11 @@ body,h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
 
 .btn-dasar:hover
   background-color: white
-  color: $tc-gelap
+  color: $tc-dark
   text-decoration: none
 
 .btn-dasar:active
-  color: $tc-gelap
+  color: $tc-dark
   background-color: white
   text-decoration: none
 
@@ -55,7 +55,7 @@ body,h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
 
 .bg-error
   padding: 0.2rem
-  background-color: $tc-merah
+  background-color: $tc-red
 
 .bg-success
   padding: 0.3rem
@@ -64,10 +64,10 @@ body,h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
 .help-block
   color: white
 
-$bgDefault      : $tc-gelap
-$bgHighlight    : $tc-merah
+$bgDefault      : $tc-dark
+$bgHighlight    : $tc-red
 $colDefault     : #ecf0f1
-$bgHover        : $tc-merah
+$bgHover        : $tc-red
 $colHover       : white
 $dropDown       : false
 .navbar-default
