--- a/www/laravel4/app/dev/sass/main.sass
+++ b/www/laravel4/app/dev/sass/main.sass
@@ -3,17 +3,41 @@
 $break-hp: "only screen and (max-width : 400px)"
 $tc-light: #ed6333
 $tc-dark: #343434
+$tc-monokai: #524F52
 $tc-red: #bc423b
+$tc-blue: #152EBA
+$tc-green: #167f10
+
+html, body
+  height: 100%
 
 body
   color: white
-  background-color: $tc-light
+  background-color: $tc-red
 
 h1
   text-align: center
 
+
 body,h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
   font-family: "Open Sans", "Ubuntu", Helvetica, Arial, sans-serif!important
+
+main
+  max-width: 1000px
+  min-height: 100%
+  height: auto !important
+  height: 100%
+  background-color: $tc-monokai
+  margin: 0 auto -100px auto
+  padding-top: 70px
+  padding-bottom: 150px
+
+footer
+  height: 100px
+  background-color: $tc-light
+
+section.dashboard h1
+  text-align: left
 
 #form-login
   background-color: $tc-dark
@@ -25,16 +49,21 @@ body,h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
   @media #{$break-hp}
     width: 300px
 
-#form-daftar
-  width: 800px
+.form-daftar
+  width: 90%
+  margin-left: auto
+  margin-right: auto
 
 .btn-dasar
   background-color: $tc-dark
+  display: inline-block
   padding: 7px 15px
   border-radius: 0
   color: white
   border: 1px solid white
   transition: all 200ms ease
+  min-width: 100px
+  text-align: center
 
 .btn-dasar:visited, .btn-dasar:link
   text-decoration: none
@@ -50,16 +79,19 @@ body,h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6
   background-color: white
   text-decoration: none
 
+.btn-primary
+  background-color: $tc-blue
+
 .btn-important
-  background-color: green
+  background-color: $tc-green
 
 .bg-error
-  padding: 0.2rem
+  padding: 1rem
   background-color: $tc-red
 
 .bg-success
-  padding: 0.3rem
-  background-color: green
+  padding: 1rem
+  background-color: $tc-green
 
 .help-block
   color: white
@@ -137,3 +169,16 @@ $dropDown       : false
         background-color: $bgHover
         color: $colHover
         background-color: $bgHighlight
+
+.nav-tabs
+  li.active a
+    color: white
+    background-color: $tc-light
+  li:hover.active a
+    background-color: #f49e80
+    color: white
+  li a
+    color: white
+  li:hover a
+    color: white
+    background-color: #f49e80
