Fix glyphicon unseen in white background

--- a/www/laravel4/app/dev/sass/main.sass
+++ b/www/laravel4/app/dev/sass/main.sass
@@ -117,8 +117,9 @@ legend
     color: #82CDB9
     padding: 2px 5px
     display: inline-block
+
     span.glyphicon
-      color: white
+      color: $tc-dark
 
 $bgDefault      : $tc-dark
 $bgHighlight    : $tc-red
